Actual deployment, optimize validation of Ambari environment